--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#f4612d</color>
+    <color name="darkgray">#707070</color>
+    <color name="grey">#fefefe</color>
+    <color name="black2">#1e1e1e</color>
 </resources>
